[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json"] }
matchit = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
http = "0.2"
tower = "0.4"
tower-http = "0.4"
dotenv = "0.15"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde_urlencoded = "0.7"

[build-dependencies]
sqlx = { version = "0.7", features = ["postgres", "macros"] }